Partway through page reorder work. Javascript and template are correct, reorder logic is not.
git-svn-id: https://source.sakaiproject.org/contrib/evaluation/trunk@3265 fdecad78-55fc-0310-b1b2-d7d25cf747c9