@@ -12,16 +12,8 @@
  *****************************************************************************/
 package org.sakaiproject.evaluation.tool;
 
-import java.util.Date;
 import java.util.HashMap;
 import java.util.Map;
-
-import org.sakaiproject.evaluation.logic.EvalExternalLogic;
-import org.sakaiproject.evaluation.logic.EvalItemsLogic;
-import org.sakaiproject.evaluation.logic.EvalScalesLogic;
-import org.sakaiproject.evaluation.model.EvalItem;
-import org.sakaiproject.evaluation.model.EvalScale;
-import org.sakaiproject.evaluation.model.EvalTemplateItem;
 
 import uk.org.ponder.beanutil.BeanLocator;
 
@@ -35,21 +27,10 @@ public class TemplateItemBeanLocator implements BeanLocator {
   public static final String NEW_PREFIX = "new";
   public static String NEW_1 = NEW_PREFIX + "1";
 
-  private EvalItemsLogic itemsLogic;
-
-  public void setItemsLogic(EvalItemsLogic itemsLogic) {
-    this.itemsLogic = itemsLogic;
-  }
-
-  private EvalScalesLogic scalesLogic;
-  public void setScalesLogic(EvalScalesLogic scalesLogic) {
-		this.scalesLogic = scalesLogic;
-	}
+  private LocalTemplateLogic localTemplateLogic;
   
-  private EvalExternalLogic external;
-
-  public void setExternal(EvalExternalLogic external) {
-    this.external = external;
+  public void setLocalTemplateLogic(LocalTemplateLogic localTemplateLogic) {
+    this.localTemplateLogic = localTemplateLogic;
   }
 
   private Map delivered = new HashMap();
@@ -58,21 +39,19 @@ public class TemplateItemBeanLocator implements BeanLocator {
     Object togo = delivered.get(path);
     if (togo == null) {
       if (path.startsWith(NEW_PREFIX)) {
-        EvalItem newItem=new EvalItem(new Date(), external.getCurrentUserId(), "", "",
-                "", new Boolean(false));
-    	  togo = new EvalTemplateItem(new Date(), external.getCurrentUserId(),
-            null, newItem, null, "");
-        
+        togo = localTemplateLogic.newTemplateItem();
       }
       else {
-        togo = itemsLogic.getTemplateItemById(new Long(Long.parseLong(path
-            .trim())));
+        togo = localTemplateLogic.fetchTemplateItem(Long.valueOf(path));
       }
       delivered.put(path, togo);
     }
     return togo;
   }
 
-
-
+  /** Package-protected access to "dead" list of delivered beans */
+  Map getDeliveredBeans() {
+    return delivered;
+  }
+  
 }
